added header and menu

--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="libs.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
   
+  <header class="header">
+    <div class="container">
+      <div class="header__wrapper">
+        <div class="header__logo">
+          <a href="#"><img src="img/header-logo.png" alt=""></a>
+          <a class="header__logo-text" href="#">Mart<span>Place</span></a>
+        </div>
+        <div class="header__inner">
+          <div class="header__btn">
+            <a class="header__btn-text" href="#">Become a Seller</a>
+          </div>
+          <div class="header__icons">
+            <a class="icon-alarm" href="#"><img src="img/icon-alarm.png" alt=""></a>
+            <a class="icon-sms" href="#"><img src="img/icon-sms.png" alt=""></a>
+            <a class="icon-cart" href="#"><img src="img/icon-cart.png" alt=""></a>
+          </div>
+          <div class="header__office">
+            <img src="img/office.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>                                
+  </header>
+
+  <section class="menu">
+    <div class="container">
+      <nav class="nav">
+        <ul class="menu__list">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">all products</a></li>
+          <li><a href="#">wordpress</a></li>
+          <li><a href="#">festures</a></li>
+          <li><a href="#">Pages</a></li>
+          <input class="search" type="text">
+        </ul>
+      </nav>
+    </div>
+  </section>    
+  
+  <section class="main">
+    <div class="container">
+      <h1 class="title"><span>Create Your Own</span>
+        Digital Product Marketplace</h1>
+        <p class="title__text">MartPlace is the most powerful, 
+          & customizable template for Easy Digital Downloads Products
+        </p>
+       <div class="title__link">
+        <a href="#">View All Products</a>
+        <a href="#">Popular Products</a>
+       </div>
+    </div>
+  </section>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
