--- a/app/index.html
+++ b/app/index.html
@@ -44,8 +44,11 @@
           <li><a href="#">wordpress</a></li>
           <li><a href="#">festures</a></li>
           <li><a href="#">Pages</a></li>
-          <input class="search" type="text">
         </ul>
+        <form action="#">
+          <input type="text" placeholder="Search product here...">
+          <button><img src="img/icons/search.png" alt=""></button>
+        </form>
       </nav>
     </div>
   </section>    
